improvements to scorer + fix non-visible bug for questions list

--- a/client/src/admin-scorer/Scorer.css
+++ b/client/src/admin-scorer/Scorer.css
@@ -25,7 +25,9 @@
     align-items: center;
     justify-content: center;
     font-size: 1.5em;
+    padding-bottom: 10px;
 }
+
 .player-scorer {
     display: flex;
     flex-direction: row;
