--- a/client/src/round/RoundList.css
+++ b/client/src/round/RoundList.css
@@ -1,11 +1,12 @@
 .round_list {
-	display: flex;
-	flex-direction: row;
+    display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: flex-start;
     align-self: flex-start;
     align-items: center;
     padding: 25px;
+    overflow-y: auto;
 }
 
 .round-and-open-question {
@@ -13,4 +14,5 @@
     flex-direction: row;
     justify-content: space-between;
     flex-grow: 1;
+    overflow-y: clip;
 }
